fix: optimize word wrap and padding

--- a/src/app/content/projects/projects.component.scss
+++ b/src/app/content/projects/projects.component.scss
@@ -30,6 +30,7 @@ app-application {
 
     p {
         margin: 0px;
+        padding: 0 16px;
     }
 }
 
